--- a/res/layout/activity_quiz.xml
+++ b/res/layout/activity_quiz.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:text="@string/question_text" />
+        android:id="@+id/question_text_view" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -28,5 +28,11 @@
             android:text="@string/false_button" />
 
     </LinearLayout>
+    <Button 
+        android:id="@+id/next_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next_button"
+        android:drawableRight="@drawable/arrow_right"/>
 
 </LinearLayout>
