--- a/res/layout/activity_quiz.xml
+++ b/res/layout/activity_quiz.xml
@@ -28,11 +28,26 @@
             android:text="@string/false_button" />
 
     </LinearLayout>
-    <Button 
-        android:id="@+id/next_button"
+    <LinearLayout 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/next_button"
-        android:drawableRight="@drawable/arrow_right"/>
+        android:orientation="horizontal">
+        
+        <Button 
+	        android:id="@+id/prev_button"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/prev_button"
+	        android:drawableLeft="@drawable/arrow_left"/>
+        
+        <Button 
+	        android:id="@+id/next_button"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/next_button"
+	        android:drawableRight="@drawable/arrow_right"/>
+        
+    </LinearLayout>
+	    
 
 </LinearLayout>
