--- a/res/layout/activity_quiz.xml
+++ b/res/layout/activity_quiz.xml
@@ -33,19 +33,17 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         
-        <Button 
+        <ImageButton 
 	        android:id="@+id/prev_button"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="@string/prev_button"
-	        android:drawableLeft="@drawable/arrow_left"/>
+	        android:src="@drawable/arrow_left"/>
         
-        <Button 
+        <ImageButton 
 	        android:id="@+id/next_button"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="@string/next_button"
-	        android:drawableRight="@drawable/arrow_right"/>
+	        android:src="@drawable/arrow_right"/>
         
     </LinearLayout>
 	    
